--- a/demo/index.html
+++ b/demo/index.html
@@ -3,23 +3,43 @@
     <head>
         <title>Sample Project</title>
         <script data-main="app" src="lib/require.js"></script>
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+        <link href="//cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
     </head>
     <body>
-        <h1>My Sample Project</h1>
+        <div class="container">
+            <h1>My Sample Project</h1>
 
-        
-        <div id="test"> 
-            Ready! 
+            <div class="row">
+
+                <div class="col">
+
+                    <div class="form-group">
+                        <textarea id="test" class="rte"  class="form-control">This is my textarea</textarea>
+                    </div>
+
+                    <div class="form-group">
+                        <textarea id="test2" class="rte"   class="form-control">This is my other textarea</textarea>
+                    </div>
+
+                </div>
+                <div class="col">
+                    <p>
+                        <a href="#" id="showHiddenContent">Show Content</a>
+                    </p>
+                    <p>
+                        - shows the content of the currently hidden textareas. This 
+                        is what would be submitted with a form
+
+                    </p>
+                    <div class="form-group">
+                        <textarea id="testContent" class="form-control"></textarea >
+                    </div>
+                    <div class="form-group">
+                        <textarea id="test2Content" class="form-control"></textarea >
+                    </div>
+                </div>
+            </div>
         </div>
-
-        <div id="test2"> 
-            Ready! 
-        </div>
-
-        <div id="test3"> 
-            Ready! 
-        </div>
-
     </body>
 </html>
