--- a/demo/demo-1.html
+++ b/demo/demo-1.html
@@ -3,7 +3,7 @@
     <head>
         <title>Sample Project</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-        <link href="//cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
+        <link href="./css/quill.snow.css" rel="stylesheet">
     </head>
     <body>
         <div class="container">
