--- a/demo/demo-2-usingrequirejs.html
+++ b/demo/demo-2-usingrequirejs.html
@@ -4,7 +4,7 @@
         <title>Sample Project</title>
         <script data-main="app" src="lib/require.js"></script>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-        <link href="//cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
+        <link href="./css/quill.snow.css" rel="stylesheet">
     </head>
     <body>
         <div class="container">
