--- a/demo/demo-3.html
+++ b/demo/demo-3.html
@@ -3,8 +3,9 @@
     <head>
         <title>Sample Project</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-        <link href="//cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
-        <link href="//cdn.quilljs.com/1.3.6/quill.bubble.css" rel="stylesheet">
+        <link href="./css/quill.snow.css" rel="stylesheet">
+        <link href="./css/quill.bubble.css" rel="stylesheet">
+        <style>pre {background: whitesmoke; padding: 1rem;}</style>
 
     </head>
     <body>
@@ -15,12 +16,24 @@
                 <div class="col">
                     <div class="form-group">
                         <p>Auto-init</p>
+                        <pre><code>quillwrap.autoinit();</code></pre>
                         <textarea id="test" class="rte form-control" >This is my textarea</textarea>
                     </div>
                     <hr />
-                    <p>Manual-init</p>
+                    <p>Manual-init (using the init function and passing in required configuration)</p>
+                    <pre><code>quillwrap.init(
+    $('#test2'),       // target textarea
+    {theme: 'snow'}    // theme
+);</code></pre>
                     <div class="form-group">
                         <textarea id="test2" class="manual form-control" >This is my textarea</textarea>
+                    </div>
+                    <pre><code>quillwrap.init(
+    $('#test3'),       // target textarea
+    {theme: 'bubble'}  // theme
+);</code></pre>
+                    <div class="form-group">
+                        <textarea id="test3" class="manual form-control" >This is my textarea</textarea>
                     </div>
                 </div>
                 <div class="col">
@@ -37,6 +50,10 @@
 
                     <div class="form-group">
                         <textarea id="testContent2" class="form-control"></textarea >
+                    </div>
+
+                     <div class="form-group">
+                        <textarea id="testContent3" class="form-control"></textarea >
                     </div>
 
                 </div>
@@ -58,13 +75,23 @@
                     var ht = $hiddenTextArea.val();
                     $('#testContent').html(ht);
 
-                    var $hiddenTextArea = $('#test2');
-                    var ht = $hiddenTextArea.val();
+                    var $hiddenTextArea2 = $('#test2');
+                    var ht = $hiddenTextArea2.val();
                     $('#testContent2').html(ht);
+
+                     var $hiddenTextArea3 = $('#test3');
+                    var ht = $hiddenTextArea3.val();
+                    $('#testContent3').html(ht);
+
                 });
 
                 quillwrap.init(
                         $('#test2'),
+                        {theme: 'snow'}
+                );
+
+                quillwrap.init(
+                        $('#test3'),
                         {theme: 'bubble'}
                 );
             });
